--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -6,8 +6,9 @@
     <meta name="theme-color" content="#000000" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <script src="https://kit.fontawesome.com/2687a23fd5.js" crossorigin="anonymous"></script>
-    <title>React Template</title>
-  </head>
+    <title>Horizon. All Smiles. No Spending</title>
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.png">
+</head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
