--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -6,6 +6,7 @@
     <meta name="theme-color" content="#000000" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <script src="https://kit.fontawesome.com/2687a23fd5.js" crossorigin="anonymous"></script>
+    <link rel="icon" type="image/x-icon" href="./assets/favicon.png">
     <title>Horizon. All Smiles. No Spending</title>
 </head>
   <body>
